--- a/app/src/main/res/layout/contact_item_layout.xml
+++ b/app/src/main/res/layout/contact_item_layout.xml
@@ -3,19 +3,37 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
-
+    android:background="#F0F0F0"
+   >
+    <View
+        android:layout_width="match_parent"
+        android:background="#E0E0E0"
+        android:layout_height="1dp"/>
     <TextView
         android:id="@+id/nameTextView"
+        android:paddingStart="20dp"
+        android:paddingTop="10dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#333333"
         android:textSize="18sp"
         android:textStyle="bold" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dip"/>
 
     <TextView
         android:id="@+id/phoneNumberTextView"
         android:layout_width="wrap_content"
+        android:textStyle="bold"
+        android:paddingStart="20dp"
+        android:textColor="#607D8B"
+        android:paddingBottom="10dp"
         android:layout_height="wrap_content"
         android:textSize="16sp" />
+    <View
+        android:layout_width="match_parent"
+        android:background="#E0E0E0"
+        android:layout_height="1dp"/>
 
 </LinearLayout>
