--- a/app/src/main/res/drawable/toast_background.xml
+++ b/app/src/main/res/drawable/toast_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/holo_blue_light"/> <!-- Background color -->
+    <solid android:color="#d033b5e5"/> <!-- Background color -->
     <corners android:radius="8dp"/> <!-- Corner radius -->
     <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp"/> <!-- Optional padding -->
 </shape>
