--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="default_color">#F0F0F0</color> <!-- Default background color -->
+    <color name="clicked_color">#DADADA</color> <!-- Slightly darker color when item is clicked -->
 </resources>
